[metadata]
name = sparc4-pipeline
author = SPARC4-Dev team
author_email = juliocampagnolo@gmail.com
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/sparc4-dev/sparc4-pipeline
description = Reduction pipeline for SPARC4 polarimeter
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = sparc4-dev/sparc4-pipeline

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropop

[options.extras_require]
all =
    matplotlib

test =

docs =
    ipython
    ipykernel
    sphinx-astropy
    sphinx-book-theme
    numpydoc
    nbsphinx
    pandoc

[options.package_data]
s4pipe = data/*

[options.packages.find]
exclude =
    tests

[pycodestyle]
max-line-length = 120

[pydocstyle]
convention = numpy
